crates/assay-types/tests/snapshots/schema_snapshots__gate-result-schema.snap
---
source: crates/assay-types/tests/schema_snapshots.rs
expression: schema.to_value()
---
{
  "$defs": {
    "Confidence": {
      "description": "Agent confidence level in an evaluation.",
      "oneOf": [
        {
          "const": "high",
          "description": "High confidence — clear evidence supports the conclusion.",
          "type": "string"
        },
        {
          "const": "medium",
          "description": "Medium confidence — evidence is suggestive but not conclusive.",
          "type": "string"
        },
        {
          "const": "low",
          "description": "Low confidence — uncertain; evaluation may need human review.",
          "type": "string"
        }
      ]
    },
    "EvaluatorRole": {
      "description": "The role of the evaluator who produced a gate result.\n\nDetermines trust level and audit requirements:\n- `SelfEval` (\"self\"): the coding agent evaluates its own work (default for v0.2).\n- `Independent`: a separate agent evaluates (planned for v0.3).\n- `Human`: a human performed the evaluation.",
      "oneOf": [
        {
          "const": "self",
          "description": "The coding agent evaluates its own work.",
          "type": "string"
        },
        {
          "const": "independent",
          "description": "A separate, independent agent evaluates.",
          "type": "string"
        },
        {
          "const": "human",
          "description": "A human performed the evaluation.",
          "type": "string"
        }
      ]
    },
    "GateKind": {
      "description": "The kind of gate to evaluate.\n\nUses internal tagging (`#[serde(tag = \"kind\")]`) so TOML output includes\na `kind = \"Command\"` or `kind = \"AlwaysPass\"` discriminator field.",
      "oneOf": [
        {
          "description": "A gate that runs a shell command and checks its exit code.",
          "properties": {
            "cmd": {
              "description": "The shell command to execute.",
              "type": "string"
            },
            "kind": {
              "const": "Command",
              "type": "string"
            }
          },
          "required": [
            "kind",
            "cmd"
          ],
          "type": "object"
        },
        {
          "description": "A gate that always passes — useful for placeholder or manual gates.",
          "properties": {
            "kind": {
              "const": "AlwaysPass",
              "type": "string"
            }
          },
          "required": [
            "kind"
          ],
          "type": "object"
        },
        {
          "description": "A gate that checks whether a file exists at the given path.",
          "properties": {
            "kind": {
              "const": "FileExists",
              "type": "string"
            },
            "path": {
              "description": "Path to check, relative to the working directory.",
              "type": "string"
            }
          },
          "required": [
            "kind",
            "path"
          ],
          "type": "object"
        },
        {
          "description": "A gate evaluated by an agent via structured reasoning.",
          "properties": {
            "kind": {
              "const": "AgentReport",
              "type": "string"
            }
          },
          "required": [
            "kind"
          ],
          "type": "object"
        },
        {
          "description": "A gate that counts events of a specific type in the agent session log.\n\n`event_type` must match the serde tag of an `AgentEvent` variant:\n`\"tool_called\"`, `\"tool_result\"`, `\"turn_ended\"`, `\"session_stopped\"`,\n`\"text_delta\"`, `\"text_block\"`.\n\nPasses when `count >= min.unwrap_or(0) && count <= max.unwrap_or(u32::MAX)`.",
          "properties": {
            "event_type": {
              "description": "The event type to count, matching an `AgentEvent` serde tag.",
              "type": "string"
            },
            "kind": {
              "const": "EventCount",
              "type": "string"
            },
            "max": {
              "description": "Inclusive upper bound on the matched event count. `None` means no upper bound.",
              "format": "uint32",
              "minimum": 0,
              "type": [
                "integer",
                "null"
              ]
            },
            "min": {
              "description": "Inclusive lower bound on the matched event count. `None` means no lower bound.",
              "format": "uint32",
              "minimum": 0,
              "type": [
                "integer",
                "null"
              ]
            }
          },
          "required": [
            "kind",
            "event_type"
          ],
          "type": "object"
        },
        {
          "description": "A gate that passes only when no tool invocation in the session returned an error.\n\nFails if any `AgentEvent::ToolResult { is_error: true, .. }` is present.",
          "properties": {
            "kind": {
              "const": "NoToolErrors",
              "type": "string"
            }
          },
          "required": [
            "kind"
          ],
          "type": "object"
        }
      ]
    }
  },
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "description": "The result of evaluating a gate.\n\nCaptures whether the gate passed, the command output (if any), timing,\nand which kind of gate produced this result (self-describing via `kind`).",
  "properties": {
    "confidence": {
      "anyOf": [
        {
          "$ref": "#/$defs/Confidence"
        },
        {
          "type": "null"
        }
      ],
      "description": "Agent's confidence level in the evaluation.\nOnly populated for `AgentReport` gates."
    },
    "duration_ms": {
      "description": "How long the gate took to evaluate, in milliseconds.",
      "format": "uint64",
      "minimum": 0,
      "type": "integer"
    },
    "evaluator_role": {
      "anyOf": [
        {
          "$ref": "#/$defs/EvaluatorRole"
        },
        {
          "type": "null"
        }
      ],
      "description": "Role of the evaluator who produced this result.\nOnly populated for `AgentReport` gates."
    },
    "evidence": {
      "description": "What the agent observed (concrete facts).\nOnly populated for `AgentReport` gates.",
      "type": [
        "string",
        "null"
      ]
    },
    "exit_code": {
      "description": "Exit code from the gate command, if applicable.\nOmitted from serialized output when `None` (e.g., for `AlwaysPass` gates).",
      "format": "int32",
      "type": [
        "integer",
        "null"
      ]
    },
    "kind": {
      "$ref": "#/$defs/GateKind",
      "description": "Which gate kind produced this result."
    },
    "original_bytes": {
      "description": "Original byte count before truncation.\nOmitted from serialized output when `None`.",
      "format": "uint64",
      "minimum": 0,
      "type": [
        "integer",
        "null"
      ]
    },
    "passed": {
      "description": "Whether the gate passed.",
      "type": "boolean"
    },
    "reasoning": {
      "description": "Why those facts lead to pass/fail.\nOnly populated for `AgentReport` gates.",
      "type": [
        "string",
        "null"
      ]
    },
    "stderr": {
      "description": "Standard error captured from the gate command.\nOmitted from serialized output when empty.",
      "type": "string"
    },
    "stdout": {
      "description": "Standard output captured from the gate command.\nOmitted from serialized output when empty.",
      "type": "string"
    },
    "timestamp": {
      "description": "When the gate evaluation completed.",
      "format": "date-time",
      "type": "string"
    },
    "truncated": {
      "description": "Whether stdout or stderr was truncated due to size limits.\nOmitted from serialized output when false.",
      "type": "boolean"
    }
  },
  "required": [
    "passed",
    "kind",
    "duration_ms",
    "timestamp"
  ],
  "title": "GateResult",
  "type": "object"
}
