crates/assay-types/tests/snapshots/schema_snapshots__gates-config-schema.snap
---
source: crates/assay-types/tests/schema_snapshots.rs
assertion_line: 41
expression: schema.to_value()
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "description": "Gate execution configuration.",
  "properties": {
    "default_timeout": {
      "default": 300,
      "description": "Default timeout for gate commands in seconds. Defaults to 300.",
      "format": "uint64",
      "minimum": 0,
      "type": "integer"
    },
    "working_dir": {
      "description": "Working directory for gate execution.",
      "type": [
        "string",
        "null"
      ]
    }
  },
  "title": "GatesConfig",
  "type": "object"
}
